Fix small screen layout bugs

--- a/style.css
+++ b/style.css
@@ -333,32 +333,71 @@ hr {
   border-left-width: 0px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
+  .main-wrapper {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .top-row {
+    display: none;
+    height: 0px;
+  }
+
+  .search {
+    display: none;
+  }
+
+  .search .icon {
+    display: none;
+  }
+
+  .toolbar {
+    display: none;
+  }
+
+  .bot-row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content-buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
   .content {
     display: flex;
     flex-direction: column;
-    grid-area: 2 / 1 / 3 / 4;
   }
 
   button {
     font-size: 12px;
     padding: 4px 6px;
+    width: 100px;
+    height: 40px;
   }
 
-  .sidebar ul li img {
-    display: none;
+  .hello-bot {
+    font-size: 1.3rem;
   }
 
-  .main-wrapper {
-    padding: 0;
+  .card .name {
+    font-size: 1.3rem;
   }
 
-  .header {
-    grid-area: 1 / 1 / 2 / 4;
-  }
-
-  .sidebar {
-    grid-area: 3 / 1 / 4 / 4;
-
+  .card .text {
+    font-size: 1.1rem;
   }
 }
